# snakemake-executor-plugin-htcondor

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
docs/: further.md  intro.md
snakemake_executor_plugin_htcondor/: __init__.py
tests/: sleep.sub  tests.py
